<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreActivity"
    android:padding="16dp">

    <!-- Title:Image
    // Author: Pinterest
    // Version: 1.0
    // Available: https://th.bing.com/th/id/OIP.kkXUhDWWluofKFPem3NUiAAAAA?cb=iwc2&rs=1&pid=ImgDetMain -->

    <!-- Background Image -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
    <!-- Unique ID for background image -->
    <!--Width spans full screen-->
    <!-- Scales image to fill, cropping as necessary-->


    <TextView
        android:id="@+id/scoreHeaderTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@color/white"
        android:text="@string/score_header"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <!-- Unique ID for title text -->
    <!-- Width adjusts to text length -->
    <!-- Height adjusts to text content -->
    <!-- Display text -->
    <!-- Text size -->
    <!-- Bold style -->
    <!-- Black text colour -->
    <!-- Centers the text horizontally -->
    <!-- Space below the title -->

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:textAlignment="center"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scoreHeaderTextView"
        tools:text="3/5" />
    <!-- Unique ID for title text -->
    <!-- Width adjusts to text length -->
    <!-- Height adjusts to text content -->
    <!-- Display text -->
    <!-- Text size -->
    <!-- Bold style -->
    <!-- Black text colour -->
    <!-- Centers the text horizontally -->
    <!-- Space below the title -->

    <TextView
        android:id="@+id/scoreFeedbackTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scoreTextView"
        tools:text="Feedback based on score" />
    <!-- Unique ID for title text -->
    <!-- Width adjusts to text length -->
    <!-- Height adjusts to text content -->
    <!-- Display text -->
    <!-- Text size -->
    <!-- Bold style -->
    <!-- Black text colour -->
    <!-- Centers the text horizontally -->
    <!-- Space below the title -->

    <Button
        android:id="@+id/reviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:backgroundTint="@color/black"
        android:text="@string/review_button"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/scoreFeedbackTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <!-- Unique ID for button -->
    <!-- Button text -->
    <!-- TextSize -->
    <!-- Custom black colour tint -->

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:layout_marginTop="76dp"
        android:textSize="25sp"
        android:text="@string/exit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reviewButton" />
    <!-- Unique ID for button -->
    <!-- Button text -->
    <!-- TextSize -->
    <!-- Custom black colour tint -->

</androidx.constraintlayout.widget.ConstraintLayout>